--- a/pkg/barcode/DESCRIPTION
+++ b/pkg/barcode/DESCRIPTION
@@ -5,6 +5,7 @@ Title: Barcode distribution plots
 Author: John W. Emerson and Walton A. Green
 Maintainer: John W. Emerson <john.emerson@yale.edu>
 Depends: grid, lattice
+Enhances: gpairs
 Description: This package includes the function \code{barcode()}, which produces a histogram-like plot of a distribution that shows granularity in the data.
 License: GPL (>= 2)
 Copyright: (C) 2010 John W. Emerson and Walton A. Green
