--- a/pkg/gpairs/DESCRIPTION
+++ b/pkg/gpairs/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: gpairs
 Version: 1.0
-Date: 2010-12-16
+Date: 2011-06-27
 Title: Generalized Pairs Plots
-Author: John W. Emerson and Walton Green
+Author: John W. Emerson and Walton A. Green
 Maintainer: John W. Emerson <john.emerson@yale.edu>
 Depends: barcode, grid, lattice, vcd, MASS, colorspace
 Enhances: YaleToolkit
 Description: Produces a generalized pairs (gpairs) plot.
 License: GPL (>= 2)
-Copyright: (C) 2010 John W. Emerson and Walton A. Green
+Copyright: (C) 2011 John W. Emerson and Walton A. Green
