git-svn-id: svn://svn.r-forge.r-project.org/svnroot/yaletoolkit@6 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gpairs/DESCRIPTION
+++ b/pkg/gpairs/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: gpairs
 Version: 1.0
 Date: 2011-06-27
-Title: Generalized Pairs Plots
+Title: gpairs: The Generalized Pairs Plot
 Author: John W. Emerson and Walton A. Green
 Maintainer: John W. Emerson <john.emerson@yale.edu>
 Depends: barcode, grid, lattice, vcd, MASS, colorspace
