--- a/pkg/YaleToolkit/DESCRIPTION
+++ b/pkg/YaleToolkit/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: YaleToolkit
-Version: 4.0
-Date: 2011-06-27
+Version: 4.1
+Date: 2012-02-19
 Title: Data exploration tools from Yale University.
 Author: John W. Emerson and Walton A. Green
 Maintainer: John W. Emerson <john.emerson@yale.edu>
-Depends: barcode, gpairs, grid, lattice, vcd, MASS, colorspace
+Depends: grid, lattice, vcd, MASS, colorspace, barcode, gpairs
 Description: This collection of data exploration tools was developed at
         Yale University for the graphical exploration of complex
         multivariate data; barcode and gpairs now have their own packages.
 License: GPL (>= 2)
-Copyright: (C) 2011 John W. Emerson and Walton Green
+Copyright: (C) 2012 John W. Emerson and Walton Green
