--- a/pkg/gpairs/DESCRIPTION
+++ b/pkg/gpairs/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2014-03-09
 Title: gpairs: The Generalized Pairs Plot
 Author: John W. Emerson and Walton A. Green
 Maintainer: John W. Emerson <john.emerson@yale.edu>
-Depends: barcode, grid, lattice, vcd, MASS, colorspace
+Imports: grid, barcode, lattice, vcd, MASS, colorspace
 Enhances: YaleToolkit
 Description: Produces a generalized pairs (gpairs) plot.
 License: GPL (>= 2)
